Get element API
